--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           </form>
 
           <div id="links" class="links_container">
-            <li id="links" class="links">
+            <ul id="links" class="links">
 
-            </li>
+            </ul>
           </div>
 
       </div>
