--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div id="wrap">
       <div id="container">
-        <h1>SIMPLE Search</h1>
+        <h1><b>SIMPLE</b> Search</h1>
           <form class="" action="index.html" method="post">
             <label>
               <input id="searchString" type="text" required>
