--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
       <script src="https://kit.fontawesome.com/e21c9495dc.js"></script>
+      <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="material.min.css">
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -18,10 +19,11 @@
 
     <div id="wrap">
       <div id="container">
+        <img src="logo.svg" alt="Simpol Search logo">
         <h1><b>SIMPLE</b> Search</h1>
           <form class="" action="index.html" method="post">
             <label>
-              <input id="searchString" type="text" required>
+              <input id="searchString" type="text" placeholder="Type here to search">
               <button type="button" for="search">
                 <i class="fas fa-search"></i>
               </button>
