Keypress enter works
Enabled pressing Enter to submit input

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simpol Searcha</title>
+    <title>Simpol Search</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -19,8 +19,8 @@
 
     <div id="wrap">
       <div id="container">
-        <img src="logo.svg" alt="Simpol Search logo">
-        <h1><b>SIMPLE</b> Search</h1>
+        <img src="logo.png" alt="Simpol Search logo">
+        <h1><b>SIMPOL</b> Search</h1>
           <form class="" action="index.html" method="post">
             <label>
               <input id="searchString" type="text" placeholder="Type here to search">
@@ -31,10 +31,9 @@
           </form>
 
           <div id="links" class="links_container">
-            <ul id="links" class="links">
 
-            </ul>
           </div>
+
 
       </div>
     </div>
