--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
       </div>
     </div>
+    <center>
     <p>&copy 2019 <a href="https://www.linkedin.com/in/abrahamdn">Abraham D.Ndinga</a></p>
+    </center>
   </body>
 
     <script src="js/libs/jquery-3.3.1.min.js"></script>
